--- a/D16VideoCommander/source/VideoCommander/Main.resx
+++ b/D16VideoCommander/source/VideoCommander/Main.resx
@@ -177,6 +177,159 @@
   <data name="panel1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
   </data>
+  <data name="&gt;&gt;lblHeight.Name" xml:space="preserve">
+    <value>lblHeight</value>
+  </data>
+  <data name="&gt;&gt;lblHeight.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblHeight.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;lblHeight.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;lblWidth.Name" xml:space="preserve">
+    <value>lblWidth</value>
+  </data>
+  <data name="&gt;&gt;lblWidth.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblWidth.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;lblWidth.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;lblYPos.Name" xml:space="preserve">
+    <value>lblYPos</value>
+  </data>
+  <data name="&gt;&gt;lblYPos.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblYPos.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;lblYPos.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="&gt;&gt;lblXPos.Name" xml:space="preserve">
+    <value>lblXPos</value>
+  </data>
+  <data name="&gt;&gt;lblXPos.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblXPos.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;lblXPos.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="&gt;&gt;valHeight.Name" xml:space="preserve">
+    <value>valHeight</value>
+  </data>
+  <data name="&gt;&gt;valHeight.Type" xml:space="preserve">
+    <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;valHeight.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;valHeight.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="&gt;&gt;valWidth.Name" xml:space="preserve">
+    <value>valWidth</value>
+  </data>
+  <data name="&gt;&gt;valWidth.Type" xml:space="preserve">
+    <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;valWidth.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;valWidth.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="&gt;&gt;valYPos.Name" xml:space="preserve">
+    <value>valYPos</value>
+  </data>
+  <data name="&gt;&gt;valYPos.Type" xml:space="preserve">
+    <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;valYPos.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;valYPos.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <data name="&gt;&gt;valXPos.Name" xml:space="preserve">
+    <value>valXPos</value>
+  </data>
+  <data name="&gt;&gt;valXPos.Type" xml:space="preserve">
+    <value>System.Windows.Forms.NumericUpDown, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;valXPos.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;valXPos.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <data name="&gt;&gt;chkCloseAfterPlay.Name" xml:space="preserve">
+    <value>chkCloseAfterPlay</value>
+  </data>
+  <data name="&gt;&gt;chkCloseAfterPlay.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkCloseAfterPlay.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;chkCloseAfterPlay.ZOrder" xml:space="preserve">
+    <value>8</value>
+  </data>
+  <data name="&gt;&gt;chkEmbedded.Name" xml:space="preserve">
+    <value>chkEmbedded</value>
+  </data>
+  <data name="&gt;&gt;chkEmbedded.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkEmbedded.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;chkEmbedded.ZOrder" xml:space="preserve">
+    <value>9</value>
+  </data>
+  <data name="&gt;&gt;chkFullscreen.Name" xml:space="preserve">
+    <value>chkFullscreen</value>
+  </data>
+  <data name="&gt;&gt;chkFullscreen.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkFullscreen.Parent" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;chkFullscreen.ZOrder" xml:space="preserve">
+    <value>10</value>
+  </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 33</value>
+  </data>
+  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>188, 205</value>
+  </data>
+  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
+    <value>panel1</value>
+  </data>
+  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
+    <value>panel2</value>
+  </data>
+  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
   <data name="lblHeight.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -450,27 +603,6 @@
   <data name="&gt;&gt;chkFullscreen.ZOrder" xml:space="preserve">
     <value>10</value>
   </data>
-  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 33</value>
-  </data>
-  <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>188, 205</value>
-  </data>
-  <data name="panel1.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;panel1.Name" xml:space="preserve">
-    <value>panel1</value>
-  </data>
-  <data name="&gt;&gt;panel1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Panel, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;panel1.Parent" xml:space="preserve">
-    <value>panel2</value>
-  </data>
-  <data name="&gt;&gt;panel1.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
   <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
     <value>574, 12</value>
   </data>
@@ -519,21 +651,6 @@
   <data name="&gt;&gt;btnPlay.ZOrder" xml:space="preserve">
     <value>7</value>
   </data>
-  <data name="columnHeader1.Text" xml:space="preserve">
-    <value>Datei</value>
-  </data>
-  <data name="columnHeader1.Width" type="System.Int32, mscorlib">
-    <value>344</value>
-  </data>
-  <data name="columnHeader2.Text" xml:space="preserve">
-    <value>Start</value>
-  </data>
-  <data name="columnHeader3.Text" xml:space="preserve">
-    <value>Ende</value>
-  </data>
-  <data name="columnHeader4.Text" xml:space="preserve">
-    <value>Dauer</value>
-  </data>
   <data name="playlist.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 12</value>
   </data>
@@ -554,6 +671,21 @@
   </data>
   <data name="&gt;&gt;playlist.ZOrder" xml:space="preserve">
     <value>6</value>
+  </data>
+  <data name="columnHeader1.Text" xml:space="preserve">
+    <value>Datei</value>
+  </data>
+  <data name="columnHeader1.Width" type="System.Int32, mscorlib">
+    <value>344</value>
+  </data>
+  <data name="columnHeader2.Text" xml:space="preserve">
+    <value>Start</value>
+  </data>
+  <data name="columnHeader3.Text" xml:space="preserve">
+    <value>Ende</value>
+  </data>
+  <data name="columnHeader4.Text" xml:space="preserve">
+    <value>Dauer</value>
   </data>
   <data name="btnAdd.Location" type="System.Drawing.Point, System.Drawing">
     <value>545, 260</value>
@@ -610,7 +742,7 @@
     <value>41, 260</value>
   </data>
   <data name="btnClear.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 23</value>
+    <value>70, 23</value>
   </data>
   <data name="btnClear.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -634,7 +766,7 @@
     <value>216, 260</value>
   </data>
   <data name="btnSave.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 23</value>
+    <value>70, 23</value>
   </data>
   <data name="btnSave.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -654,9 +786,9 @@
   <data name="&gt;&gt;btnSave.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="playlistSaveDialog.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  <metadata name="playlistSaveDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
-  </data>
+  </metadata>
   <data name="playlistSaveDialog.Filter" xml:space="preserve">
     <value>Video-Playlist|*.vplx|Alle Dateien|*.*</value>
   </data>
@@ -664,10 +796,10 @@
     <value>Video-Playlist speichern...</value>
   </data>
   <data name="btnLoad.Location" type="System.Drawing.Point, System.Drawing">
-    <value>145, 260</value>
+    <value>140, 260</value>
   </data>
   <data name="btnLoad.Size" type="System.Drawing.Size, System.Drawing">
-    <value>65, 23</value>
+    <value>70, 23</value>
   </data>
   <data name="btnLoad.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -687,9 +819,9 @@
   <data name="&gt;&gt;btnLoad.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="playlistOpenDialog.TrayLocation" type="System.Drawing.Point, System.Drawing">
+  <metadata name="playlistOpenDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>167, 17</value>
-  </data>
+  </metadata>
   <data name="playlistOpenDialog.Filter" xml:space="preserve">
     <value>Video-Playlist|*.vplx|Alle Dateien|*.*</value>
   </data>
@@ -720,9 +852,9 @@
   <data name="&gt;&gt;btnSettings.ZOrder" xml:space="preserve">
     <value>4</value>
   </data>
-  <data name="$this.Localizable" type="System.Boolean, mscorlib">
+  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
+  </metadata>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
@@ -776,17 +908,5 @@
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="Error.FileLoad" xml:space="preserve">
-    <value>Die Datei konnte nicht gelesen werden:</value>
-  </data>
-  <data name="Error.FileLoad.Title" xml:space="preserve">
-    <value>Fehler beim Lesen der Datei...</value>
-  </data>
-  <data name="Message.Clear" xml:space="preserve">
-    <value>Sollen alle Einträge in der Wiedergabeliste gelöscht werden?</value>
-  </data>
-  <data name="Message.Clear.Title" xml:space="preserve">
-    <value>Alle Einträge löschen?</value>
   </data>
 </root>
