- Show position of mouse - Allow negative x and y window position - Raised version to 1.0.0.6
git-tfs-id: [https://tfs.codeplex.com:443/tfs/TFS21]$/videocommander;C12758

--- a/D16VideoCommander/source/VideoCommander/Main.en.resx
+++ b/D16VideoCommander/source/VideoCommander/Main.en.resx
@@ -195,4 +195,7 @@
   <data name="rbnDisplay2.Text" xml:space="preserve">
     <value>Live</value>
   </data>
+  <data name="cbMousePosition.Text" xml:space="preserve">
+    <value>Show mouse position</value>
+  </data>
 </root>
