--- a/D16VideoCommander/source/VideoCommander/AddDialog.resx
+++ b/D16VideoCommander/source/VideoCommander/AddDialog.resx
@@ -145,7 +145,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnOk.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="btnCancel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Right</value>
@@ -172,13 +172,13 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnCancel.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="btnBrowse.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
   </data>
   <data name="btnBrowse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>363, 11</value>
+    <value>327, 12</value>
   </data>
   <data name="btnBrowse.Size" type="System.Drawing.Size, System.Drawing">
     <value>30, 22</value>
@@ -199,11 +199,11 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;btnBrowse.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>4</value>
   </data>
-  <metadata name="fileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <data name="fileDialog.TrayLocation" type="System.Drawing.Point, System.Drawing">
     <value>17, 17</value>
-  </metadata>
+  </data>
   <data name="fileDialog.Title" xml:space="preserve">
     <value>Videodatei auswählen...</value>
   </data>
@@ -214,7 +214,7 @@
     <value>12, 11</value>
   </data>
   <data name="txbPath.Size" type="System.Drawing.Size, System.Drawing">
-    <value>345, 22</value>
+    <value>309, 22</value>
   </data>
   <data name="txbPath.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -234,21 +234,6 @@
   <data name="groupBox1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Bottom, Left, Right</value>
   </data>
-  <data name="mtbDuration.Location" type="System.Drawing.Point, System.Drawing">
-    <value>220, 44</value>
-  </data>
-  <data name="mtbDuration.Mask" xml:space="preserve">
-    <value>##:#0:00</value>
-  </data>
-  <data name="mtbDuration.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 22</value>
-  </data>
-  <data name="mtbDuration.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="mtbDuration.Text" xml:space="preserve">
-    <value>000000</value>
-  </data>
   <data name="&gt;&gt;mtbDuration.Name" xml:space="preserve">
     <value>mtbDuration</value>
   </data>
@@ -260,21 +245,6 @@
   </data>
   <data name="&gt;&gt;mtbDuration.ZOrder" xml:space="preserve">
     <value>0</value>
-  </data>
-  <data name="mtbEnd.Location" type="System.Drawing.Point, System.Drawing">
-    <value>47, 44</value>
-  </data>
-  <data name="mtbEnd.Mask" xml:space="preserve">
-    <value>##:#0:00</value>
-  </data>
-  <data name="mtbEnd.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 22</value>
-  </data>
-  <data name="mtbEnd.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="mtbEnd.Text" xml:space="preserve">
-    <value>000000</value>
   </data>
   <data name="&gt;&gt;mtbEnd.Name" xml:space="preserve">
     <value>mtbEnd</value>
@@ -288,21 +258,6 @@
   <data name="&gt;&gt;mtbEnd.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="mtbStart.Location" type="System.Drawing.Point, System.Drawing">
-    <value>47, 20</value>
-  </data>
-  <data name="mtbStart.Mask" xml:space="preserve">
-    <value>##:#0:00</value>
-  </data>
-  <data name="mtbStart.Size" type="System.Drawing.Size, System.Drawing">
-    <value>76, 22</value>
-  </data>
-  <data name="mtbStart.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="mtbStart.Text" xml:space="preserve">
-    <value>000000</value>
-  </data>
   <data name="&gt;&gt;mtbStart.Name" xml:space="preserve">
     <value>mtbStart</value>
   </data>
@@ -314,21 +269,6 @@
   </data>
   <data name="&gt;&gt;mtbStart.ZOrder" xml:space="preserve">
     <value>2</value>
-  </data>
-  <data name="label4.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>175, 47</value>
-  </data>
-  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>41, 13</value>
-  </data>
-  <data name="label4.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="label4.Text" xml:space="preserve">
-    <value>Dauer:</value>
   </data>
   <data name="&gt;&gt;label4.Name" xml:space="preserve">
     <value>label4</value>
@@ -342,21 +282,6 @@
   <data name="&gt;&gt;label4.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 47</value>
-  </data>
-  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>36, 13</value>
-  </data>
-  <data name="label3.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="label3.Text" xml:space="preserve">
-    <value>Ende:</value>
-  </data>
   <data name="&gt;&gt;label3.Name" xml:space="preserve">
     <value>label3</value>
   </data>
@@ -368,21 +293,6 @@
   </data>
   <data name="&gt;&gt;label3.ZOrder" xml:space="preserve">
     <value>4</value>
-  </data>
-  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 23</value>
-  </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>34, 13</value>
-  </data>
-  <data name="label2.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value>Start:</value>
   </data>
   <data name="&gt;&gt;label2.Name" xml:space="preserve">
     <value>label2</value>
@@ -420,6 +330,96 @@
   <data name="&gt;&gt;groupBox1.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="mtbDuration.Location" type="System.Drawing.Point, System.Drawing">
+    <value>220, 44</value>
+  </data>
+  <data name="mtbDuration.Mask" xml:space="preserve">
+    <value>##:#0:00</value>
+  </data>
+  <data name="mtbDuration.Size" type="System.Drawing.Size, System.Drawing">
+    <value>76, 22</value>
+  </data>
+  <data name="mtbDuration.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="mtbDuration.Text" xml:space="preserve">
+    <value>000000</value>
+  </data>
+  <data name="mtbEnd.Location" type="System.Drawing.Point, System.Drawing">
+    <value>47, 44</value>
+  </data>
+  <data name="mtbEnd.Mask" xml:space="preserve">
+    <value>##:#0:00</value>
+  </data>
+  <data name="mtbEnd.Size" type="System.Drawing.Size, System.Drawing">
+    <value>76, 22</value>
+  </data>
+  <data name="mtbEnd.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="mtbEnd.Text" xml:space="preserve">
+    <value>000000</value>
+  </data>
+  <data name="mtbStart.Location" type="System.Drawing.Point, System.Drawing">
+    <value>47, 20</value>
+  </data>
+  <data name="mtbStart.Mask" xml:space="preserve">
+    <value>##:#0:00</value>
+  </data>
+  <data name="mtbStart.Size" type="System.Drawing.Size, System.Drawing">
+    <value>76, 22</value>
+  </data>
+  <data name="mtbStart.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="mtbStart.Text" xml:space="preserve">
+    <value>000000</value>
+  </data>
+  <data name="label4.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>175, 47</value>
+  </data>
+  <data name="label4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>41, 13</value>
+  </data>
+  <data name="label4.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="label4.Text" xml:space="preserve">
+    <value>Dauer:</value>
+  </data>
+  <data name="label3.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>9, 47</value>
+  </data>
+  <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>36, 13</value>
+  </data>
+  <data name="label3.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="label3.Text" xml:space="preserve">
+    <value>Ende:</value>
+  </data>
+  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>9, 23</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>34, 13</value>
+  </data>
+  <data name="label2.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>Start:</value>
+  </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -447,9 +447,48 @@
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <data name="btnDVD.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <data name="btnDVD.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Segoe UI, 6pt</value>
+  </data>
+  <data name="btnDVD.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="btnDVD.Location" type="System.Drawing.Point, System.Drawing">
+    <value>363, 12</value>
+  </data>
+  <data name="btnDVD.Size" type="System.Drawing.Size, System.Drawing">
+    <value>30, 22</value>
+  </data>
+  <data name="btnDVD.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
+  <data name="btnDVD.Text" xml:space="preserve">
+    <value>DVD</value>
+  </data>
+  <data name="&gt;&gt;btnDVD.Name" xml:space="preserve">
+    <value>btnDVD</value>
+  </data>
+  <data name="&gt;&gt;btnDVD.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnDVD.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;btnDVD.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="folderBrowserDialog.TrayLocation" type="System.Drawing.Point, System.Drawing">
+    <value>120, 17</value>
+  </data>
+  <data name="folderBrowserDialog.Description" xml:space="preserve">
+    <value>Wählen Sie das zuverwendende DVD-Laufwerk aus...</value>
+  </data>
+  <data name="$this.Localizable" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
+  </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
@@ -470,6 +509,12 @@
   </data>
   <data name="&gt;&gt;fileDialog.Type" xml:space="preserve">
     <value>System.Windows.Forms.OpenFileDialog, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;folderBrowserDialog.Name" xml:space="preserve">
+    <value>folderBrowserDialog</value>
+  </data>
+  <data name="&gt;&gt;folderBrowserDialog.Type" xml:space="preserve">
+    <value>System.Windows.Forms.FolderBrowserDialog, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>AddDialog</value>
